# kmeans

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
cmake/: kmeans.cmake
scripts/: benchmark.py  compare.py  plot.py  visualize.py
src/kmeans/: CSVReader.cpp  CSVReader.hpp  CSVWriter.cpp  CSVWriter.hpp  args.cpp  args.hpp  distance.cpp  distance.hpp  divide.cpp  divide.hpp  io.cpp  io.hpp  random.cpp  random.hpp
src/kmeans/mpi-group/: data.cpp  data.hpp  kmeans.cpp  main.cpp
src/kmeans/mpi-rep/: data.cpp  data.hpp  kmeans.cpp  main.cpp
src/kmeans/omp-group/: data.cpp  data.hpp  kmeans.cpp  main.cpp
src/kmeans/omp-rep/: data.cpp  data.hpp  kmeans.cpp  main.cpp
src/kmeans/seq/: data.cpp  data.hpp  kmeans.cpp  kmeans.hpp  main.cpp
